--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>PomoTimer</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="src/style.css">
-    <script src="src/app.js" defer></script>
+
 </head>
 <body>
     <main class="main">
-        <div class="menu-btn">
-            <i class="fa-solid fa-bars"></i>
+        <div class="menu-btn" id="menu-btn">
+            <i onclick="menu()" class="fa-solid fa-bars"></i>
         </div>
-        <div class="right-bar-tasks">
+        <div class="right-bar-tasks" id="tasks">
             <div class="right-bar-tasks-title">
                 <h2>Tasks</h2>
             </div>
@@ -42,23 +42,20 @@
                 <div class="timer">
                     <div class="timer-circle">
                         <div class="time">
-                            <p id="minutes">25</p>
+                            <p id="minutes"></p>
                             <p>:</p>
-                            <p id="seconds">00</p>
+                            <p id="seconds"></p>
                         </div>
                     </div>
                 </div>
-            
-
                 <div class="controls">
-                    <button id="start" onclick="start()"><i class="fa-solid fa-play"></i></button>
+                    <button id="start" onclick="comprobar()"><i class="fa-solid fa-play"></i></button>
 
                     <a id="reset" href="/"><i class="fa-solid fa-arrow-rotate-left"></i></a>
                 </div>
             </div>
         </div>
-        
-
     </main>
+    <script src="src/app.js"></script>
 </body>
 </html>
